--- a/src/main/resources/assets/mso/lang/en_us.json
+++ b/src/main/resources/assets/mso/lang/en_us.json
@@ -102,6 +102,7 @@
   "item.mso.sgllimyi": "Sgllimyi",
   "item.mso.thornsdagger": "Acid Dagger",
   "item.mso.shot": "Vine",
+  "item.mso.waterspirit_spawn_egg": "Water Spirit Spawn Egg",
   "block.mso.junglelog": "Ivy log",
   "advancements.pretty_raw.descr": "Eat the yeet for the first time",
   "block.mso.ivyleaves": "Ivy leaves",
@@ -116,6 +117,7 @@
   "item.mso.testitem": "Testitem",
   "itemGroup.tabmsotools": "Mso: tools",
   "advancements.ichy.descr": "Pretty itchy, i should buy insurance",
+  "entity.mso.waterspirit": "Water Spirit",
   "item.mso.hunter_spawn_egg": "Hunter Spawn Egg",
   "item.mso.thornslogbow": "Thorns longbow",
   "block.mso.smeltery": "Smeltery",
